@@ -71,3 +71,5 @@ CATEGORY_QR_EVENT      = 2
 CATEGORY_QR_SOURCE     = 3
 CATEGORY_QR_PLACE      = 4
 CATEGORY_QR_REPOSITORY = 5
+CATEGORY_QR_NOTE       = 6
+CATEGORY_QR_DATE       = 7
