@@ -1,3 +1,11 @@
+2008-01-03  Douglas S. Blank  <dblank@cs.brynmawr.edu>
+	* src/ReportBase/_Constants.py: added QR_NOTE, QR_DATE
+	* src/gen/lib/date.py: working on date math
+	* src/plugins/AgeOnDate.py: new Quick View for age on date
+	* src/plugins/DefaultGadgets.py: added Age on Date gadget
+	* src/QuickReports.py: new constants
+	* src/Simple/_SimpleTable.py: handle sort columns
+
 2008-01-03  Gary Burton <gary.burton@zen.co.uk>
 	* src/Selectors/_SelectPerson.py: the select person dialog now allows a
 	person to be selected by using the keyboard. This dialog really needs an
